--- a/package.json
+++ b/package.json
@@ -8,10 +8,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.2.25"
+    "unplugin-vue-components": "^0.19.3",
+    "vue": "^3.2.25",
+    "vue-router": "^4.0.15",
+    "vue-select": "^4.0.0-beta.3"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^2.3.1",
+    "@types/vue-select": "^3.16.0",
+    "@vitejs/plugin-vue": "^2.3.2",
+    "autoprefixer": "^10.4.7",
+    "postcss": "^8.4.13",
+    "prettier": "^2.6.2",
+    "tailwindcss": "^3.0.24",
     "typescript": "^4.5.4",
     "vite": "^2.9.7",
     "vue-tsc": "^0.34.7"
