--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vueuse/core": "^8.4.2",
     "axios": "^0.27.2",
     "unplugin-vue-components": "^0.19.3",
     "vue": "^3.2.25",
