--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.27.2",
     "unplugin-vue-components": "^0.19.3",
     "vue": "^3.2.25",
+    "vue-multiselect": "^3.0.0-alpha.2",
     "vue-router": "^4.0.15",
     "vue-select": "^4.0.0-beta.3"
   },
