--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "vue": "^3.2.25",
     "vue-multiselect": "^3.0.0-alpha.2",
     "vue-router": "^4.0.15",
-    "vue-select": "^4.0.0-beta.3"
+    "vue-select": "^4.0.0-beta.3",
+    "vue3-popper": "^1.4.2"
   },
   "devDependencies": {
     "@types/vue-select": "^3.16.0",
