--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "@vueuse/core": "^8.4.2",
     "axios": "^0.27.2",
+    "sass": "^1.51.0",
+    "sweetalert2": "^11.4.11",
     "unplugin-vue-components": "^0.19.3",
     "vue": "^3.2.25",
     "vue-multiselect": "^3.0.0-alpha.2",
