--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "@vueuse/core": "^8.4.2",
     "axios": "^0.27.2",
+    "date-fns": "^2.28.0",
+    "dayjs": "^1.11.2",
     "sass": "^1.51.0",
     "sweetalert2": "^11.4.11",
     "unplugin-vue-components": "^0.19.3",
